Do no longer clamp the formalizatioin header size but prevent overflow in the frontend to maximize available chars. Closes #51

--- a/hanfor/static/css/app.css
+++ b/hanfor/static/css/app.css
@@ -79,3 +79,12 @@ body.modal-open{
   border-top: solid 1px #F0F0F0;
   margin-top: 3px;
 }
+
+/**
+* Modal specific styling
+ */
+
+/* Prevent overflow for formalizatioin titles. */
+.card-header{
+    overflow: hidden;
+}
